<resources>
    <string name="app_name">Eco car wash</string>
    <string name="next_text">Далее</string>
    <string name="skip_text">Пропустить</string>
    <string name="name_notification_channel_reports">Предлагать оставить отзыв</string>
    <string name="name_notification_channel_special_offer">Сообщать о новых акциях</string>
    <string name="name_notification_channel_other">Другие уведомления</string>
    <string name="on_board_text1">Федеральная картра для всех моек в одном приложении</string>
    <string name="on_board_text2">Получай кешбэк с каждой мойки</string>
    <string name="on_board_text3">Отслеживай все операции по карте</string>
    <string name="transaction_value_minus">- %1$d</string>
    <string name="transaction_value_plus">+ %1$d</string>
    <string name="money_value">%1$d ₽</string>
    <string name="balance_value">
          <![CDATA[
        %1$s<font color=#7B7B7B> ₽</font>
        ]]>
    </string>
    <string name="percent_value"> %1$d %%</string>
    <string name="full_address">%1$s, %2$s</string>
    <string name="replenish_offline">Пополнение %1$s</string>
    <string name="month_bonus">Месячный бонус</string>
    <string name="cashback">Кэшбэк</string>
    <string name="replenish_online">Пополнение через %1$s</string>
    <string name="replenish_online_ver2">Пополнение онлайн</string>
    <string name="waste">Списание %1$s</string>
    <string name="choose_city">Выберите город</string>
    <string name="value_of_cashback">Кешбэк %1$d%%</string>
    <string name="store_name" translatable="false">Auto T-Shirt Shop</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="hello_profile_screen">Привет,</string>
    <string name="balance_text">Баланс</string>
    <string name="cashback_text">Кэшбэк</string>
    <string name="history_tab">История</string>
    <string name="cashback_tab">КЭШБЭК</string>
    <string name="happy_hours_enable_time">
           <![CDATA[
         <font color=#E75300>Счастливые часы: %1$s — %2$s</font>
        ]]>
    </string>
    <string name="happy_hours_disable_time">
            <![CDATA[
         <font color=#939393>Счастливые часы:</font><font color=#000> %1$s — %2$s</font>
        ]]>
    </string>

    <string name="cashback_info">
         <![CDATA[
         <font color=#939393>Кэшбэк:</font><font color=#000> %1$d %%</font>
        ]]>
    </string>

    <string name="next_level_cachback">
        <![CDATA[
         До следующего уровня осталось потратить <b>%1$d₽</b>
        ]]>
    </string>
    <string name="max_level">
        Вы достигли максимального кэшбэка
    </string>
    <string name="empty_transactions_text">У вас еще нет операций по карте</string>
    <string name="discounts">Акции</string>
    <string name="profile">Баланс</string>
    <string name="map">Карта моек</string>
    <string name="there_is_not_discounts">В вашем городе нет акций</string>
    <string name="write_report">Написать отзыв</string>
    <string name="history_of_operation">История операций</string>
    <string name="type_operation">Типы операций</string>
    <string name="balance_up_offline">Пополнение оффлайн</string>
    <string name="balance_up_online">Пополнение онлайн</string>
    <string name="balance_down">Списание</string>
    <string name="bonus_for_a_month">Месячные бонус</string>
    <string name="money_back">Кэшбэк</string>
    <string name="date_range">Временной промежуток</string>
    <string name="all_time">За все время</string>
    <string name="last_week">За последнюю неделю</string>
    <string name="save">Сохранить</string>
    <string name="save_text">Сохранить</string>
    <string name="drop_filter">Сбросить</string>
    <string name="special_offer_text">Акции:</string>
    <string name="wash_title">Мойка</string>
    <string name="balance">Баланс</string>
    <string name="input_value_and_choose_payment_method">Введите сумму и выберите способ оплаты</string>
    <string name="input_value">Введите сумму оплаты</string>
    <string name="card_method">Картой</string>
    <string name="how_to_get_card">Как получить карту?</string>
    <string name="time_text">   <![CDATA[
         <font color=#000000>Вам отправлено СМС с паролем <p></br></p></font><font color=#939393>Повторная отправка будет доступна через %1$s</font>
        ]]>
        </string>
    <string name="repeatSms_text">Отправить СМС повторно</string>
    <string name="comlete">Готово</string>
    <string name="how_to_sart_wash">Как начать мойку?</string>
    <string name="scanner_qr_code_step">На терминале ECO отсканируйте QR-код</string>
    <string name="start_button_text">В приложении нажмите на кнопку «Начать»</string>
    <string name="complete_text">Хорошо</string>
    <string name="qr_scanner_text">QR-сканнер</string>
    <string name="rationale_camera">Этому приложению нужен доступ к камере, чтобы отсканировать QR-code</string>
    <string name="input_phone_number">Введите телефонный номер</string>
    <string name="without_card_text">Нет карты? Узнайте, как и где получить</string>
    <string name="input_code_text">Введите код</string>
    <string name="dialog_title">Успешно</string>
    <string name="dialog_message">Ваша карта успешно пополнена!</string>
</resources>
