<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/title_operation"
        style="@style/TextViewTitleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/type_operation"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_operation"
        app:singleLine="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_replenish_offline"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="replenish_offline"
            android:text="@string/balance_up_offline"
            android:checked="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_replenish_online"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="replenish_online"
            android:text="@string/balance_up_online"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_waste"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="waste"
            android:text="@string/balance_down" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_month_bonus"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="month_bonus"
            android:text="@string/bonus_for_a_month" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cashback"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="cashback"
            android:text="@string/money_back" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/title_date_range"
        style="@style/TextViewTitleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/date_range"
        app:layout_constraintTop_toBottomOf="@id/chipGroupType" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_allTime"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:text="@string/all_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_date_range" />

    <ViewStub
        android:id="@+id/calendarStub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="109dp"
        android:inflatedId="@+id/calendarStub"
        android:layout="@layout/calendar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_allTime" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/drop_button"
        style="@style/BlackButtonWithBlackStroke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/drop_filter"
        android:textAllCaps="true"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>