<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="true"
        app:frameColor="@android:color/white"
        app:frameCornersSize="50dp"
        app:frameCornersRadius="0dp"
        app:frameAspectRatioWidth="1"
        app:frameAspectRatioHeight="1"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:maskColor="#77000000"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/open_instruction_textView"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="Как пользоваться?"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_info_white"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/info_scanner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qr_info_drawable"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/how_to_sart_wash"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_icon_qr_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_first_step_icon"
            android:drawablePadding="20dp"
            android:text="@string/scanner_qr_code_step"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_icon_start" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_second_step"
            android:drawablePadding="20dp"
            android:text="@string/start_button_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/close_instruction"
            style="@style/GreenButtonWithoutBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="Хорошо" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>