<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/collapse_toolbar_gradient"
        app:elevation="0dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_container"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/black_gradient_rounded_corners"
                app:layout_collapseMode="parallax">

                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="228dp"
                    android:layout_margin="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_new_card_background" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/balance_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/cashback_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/money_text_view" />

                <TextView
                    android:id="@+id/money_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/balance"
                    android:layout_marginStart="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/balance" />

                <TextView
                    android:id="@+id/cashback_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cash"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cash" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#EFEFEF"
                app:layout_collapseMode="pin"/>

            <ImageButton
                android:id="@+id/options_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="end"
                android:background="@null"
                android:padding="16dp"
                android:src="@drawable/more_options_drw"
                app:layout_collapseMode="pin" />

            <ImageButton
                android:id="@+id/filter_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="end"
                android:layout_marginEnd="56dp"
                android:background="@null"
                android:src="@drawable/ic_filter_empty"
                app:layout_collapseMode="pin" />

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:maxLength="25"
                android:text="@string/balance"
                android:textStyle="bold"
                android:textColor="#939393"
                android:textSize="20sp"
                app:layout_collapseMode="pin" />

            <TextView
                android:id="@+id/money_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:maxLength="25"
                android:textColor="#000"
                android:textSize="14sp"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom"
        app:layout_collapseMode="pin"
        app:mpb_progressStyle="horizontal"
        app:mpb_showProgressBackground="false"
        app:mpb_useIntrinsicPadding="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_anchor="@id/appBar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerHorizontal="true"
            app:tabPaddingEnd="16dp"
            app:tabPaddingStart="16dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_tab" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashback_tab" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/balance_up"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/wallet_icon"
        app:backgroundTint="@color/black"
        app:fabSize="auto"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="start|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>